fix: fix double scrollbar on page (#465)

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -102,7 +102,7 @@
 }
 
 :root {
-    @apply bg-primary-bg text-primary-text text-center font-sans text-base leading-relaxed;
+    @apply bg-primary-bg text-primary-text overflow-hidden text-center font-sans text-base leading-relaxed;
     scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar);
 
     @variant max-lg {
